crates/python_parser/tests/snapshots/valid_syntax@function_def_parenthesized_return_types.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/ok/function_def_parenthesized_return_types.py
---
## AST

```
Module(
    ModModule {
        range: 0..54,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..24,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..9,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Tuple(
                            TupleExpr {
                                range: 13..19,
                                elts: [
                                    Name(
                                        NameExpr {
                                            range: 14..17,
                                            id: Name("int"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 21..24,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 21..24,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 25..53,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 29..32,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 32..34,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Tuple(
                            TupleExpr {
                                range: 38..48,
                                elts: [
                                    Name(
                                        NameExpr {
                                            range: 39..42,
                                            id: Name("int"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        NameExpr {
                                            range: 44..47,
                                            id: Name("str"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 50..53,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 50..53,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
